# note_split

./: .gitignore  README.md  setup.cfg
sample/: 202211251217 Main Note.md
src/note_split/: cli.py  file_io.py  main.py  note_manipulation.py
